# HEnvBox

./: .gitignore  Kconfiglib.bat  ReadMe.DevEnv.openwrt.md  ReadMe.Tools.Mirror.md  ReadMe.Tools.Path_Patch.md  ReadMe.Tools.crosstool-ng.md  ReadMe.Tools.cutecom-ng.md  ReadMe.md  config.bat  config.sh  install.bat  install.sh  menuconfig.sh  uninstall.bat  uninstall.sh  upgrade.bat  upgrade.sh
tools/htools/master/: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
tools/htools/master/.github/workflows/: ubuntu.yml
tools/htools/master/doc/: .gitignore  Doxyfile  HBox_Structure.dia  HBox_hdefaults_Structure.dia  ReadMe.md  mainpage.md
tools/htools/master/hbox/: CMakeLists.txt  ReadMe.md  SConscript  h3rdparty.c  h3rdparty.h  hbox.h  hcompiler.c  hcompiler.h  hcrypto.c  hcrypto.h  hdefaults.c  hdefaults.h  hdriverframework.c  hdriverframework.h  hevent.c  hevent.h  hgui.c  hgui.h  hlocale.c  hlocale.h  hmemory.c  hmemory.h  hnet.c  hnet.h  hruntime.c  hruntime.h  hshell.c  hshell.h  hsimulator.c  hsimulator.h  hsoftplc.h  huuid.c  huuid.h
tools/htools/master/hbox/cmake/: FindMATIEC.cmake  ReadMe.md
tools/htools/master/hbox/cpp/: ReadMe.md  hchain.cpp  hchain.h  hcpprt.cpp  hcpprt.h  hfifo.cpp  hfifo.h  hloop.cpp  hloop.h  hobj.cpp  hobj.h  hsim.cpp  hsim.h  hsim.mcs51.cpp  hsim.mcs51.h  hslots.cpp  hslots.h  hsoftdog.cpp  hsoftdog.h
tools/htools/master/hbox/h3rdparty/: CMakeLists.txt  ReadMe.md  SConscript  h3rdparty.h  h3rdparty_Z80_Z80.c  h3rdparty_Z80_port.c  h3rdparty_argtable3_arg_cmd.c  h3rdparty_argtable3_arg_date.c  h3rdparty_argtable3_arg_dbl.c  h3rdparty_argtable3_arg_dstr.c  h3rdparty_argtable3_arg_end.c  h3rdparty_argtable3_arg_file.c  h3rdparty_argtable3_arg_getopt_long.c  h3rdparty_argtable3_arg_hashtable.c  h3rdparty_argtable3_arg_int.c  h3rdparty_argtable3_arg_lit.c  h3rdparty_argtable3_arg_rem.c  h3rdparty_argtable3_arg_rex.c  h3rdparty_argtable3_arg_str.c  h3rdparty_argtable3_arg_utils.c  h3rdparty_argtable3_argtable3.c  h3rdparty_cjson.c  h3rdparty_cjson_port.c  h3rdparty_cjsonutils.c  h3rdparty_common.c  h3rdparty_freebsd_elf_header.c  h3rdparty_freertos_kernel_croutine.c  h3rdparty_freertos_kernel_event_groups.c  h3rdparty_freertos_kernel_heap.c  h3rdparty_freertos_kernel_list.c  h3rdparty_freertos_kernel_queue.c  h3rdparty_freertos_kernel_stream_buffer.c  h3rdparty_freertos_kernel_tasks.c  h3rdparty_freertos_kernel_timers.c  h3rdparty_libfdt_fdt.c  h3rdparty_libfdt_fdt_addresses.c  h3rdparty_libfdt_fdt_check.c  h3rdparty_libfdt_fdt_empty_tree.c  h3rdparty_libfdt_fdt_overlay.c  h3rdparty_libfdt_fdt_ro.c  (+77 more)
tools/htools/master/hbox/hcompiler/: ReadMe.md  hcompiler.c  hcompiler.h  hcompiler_armcc.h  hcompiler_armclang.h  hcompiler_clang.h  hcompiler_default.h  hcompiler_gcc.h  hcompiler_icc.h  hcompiler_lang_standard.h  hcompiler_misc.h  hcompiler_msvc.h
tools/htools/master/hbox/hcrypto/: ReadMe.md  haes.c  haes.h  hasn1.c  hasn1.h  hbase16.c  hbase16.h  hbase64.c  hbase64.h  hbcc.c  hbcc.h  hbignum.c  hbignum.h  hchacha20.c  hchacha20.h  hcrc.c  hcrc.h  hecdsa.c  hecdsa.h  heddsa.c  heddsa.h  hhmac.c  hhmac.h  hlrc.c  hlrc.h  hmd4.c  hmd4.h  hmd5.c  hmd5.h  hpoly1305.c  hpoly1305.h  hrc4.c  hrc4.h  hripemd160.c  hripemd160.h  hrng.c  hrng.h  hrsa.c  hrsa.h  hsha.c  (+5 more)
tools/htools/master/hbox/hdefaults/: ReadMe.md  hdefaults.c  hdefaults.h  hdefaults_arch.h  hdefaults_arch_aarch64.h  hdefaults_arch_arm.h  hdefaults_arch_arm_thumb.h  hdefaults_arch_riscv.h  hdefaults_arch_wasm.h  hdefaults_arch_x86.h  hdefaults_arch_x86_64.h  hdefaults_arch_xtensa.h  hdefaults_baseapi.c  hdefaults_baseapi.h  hdefaults_bits.h  hdefaults_common.h  hdefaults_config.h  hdefaults_endian.h  hdefaults_libc.h  hdefaults_libc_androidndk.h  hdefaults_libc_armclib.h  hdefaults_libc_common.h  hdefaults_libc_glibc.h  hdefaults_libc_icc.h  hdefaults_libc_mingw.h  hdefaults_libc_msvc.h  hdefaults_libc_musl.h  hdefaults_libc_newlib.h  hdefaults_libc_picolibc.h  hdefaults_libc_uclibc.h  hdefaults_os.h  hdefaults_os_android.h  hdefaults_os_cygwin.h  hdefaults_os_emscripten.h  hdefaults_os_freebsd.h  hdefaults_os_linux.h  hdefaults_os_none.h  hdefaults_os_nuttx.h  hdefaults_os_rtthread.h  hdefaults_os_unix.h  (+5 more)
tools/htools/master/hbox/hdriverframework/: ReadMe.md  hdriverframework.c  hdriverframework.h  hdriverframework_dummy.c  hdriverframework_dummy.h
tools/htools/master/hbox/hevent/: ReadMe.md  heventchain.c  heventchain.h  heventloop.c  heventloop.h  heventslots.c  heventslots.h
tools/htools/master/hbox/hgui/: ReadMe.md  hgui_gui_common.c  hgui_gui_common.h  hgui_gui_dotfont.c  hgui_gui_dotfont.h  hgui_gui_driver.c  hgui_gui_driver.h  hgui_gui_event.c  hgui_gui_event.h  hgui_gui_gui.h  hgui_gui_pixel.c  hgui_gui_pixel.h  hgui_gui_rawimage.c  hgui_gui_rawimage.h  hgui_gui_scene1.c  hgui_gui_scene1.h
tools/htools/master/hbox/hlocale/: ReadMe.md  hgb2312.c  hgb2312.h  hlocale.c  hlocale.h  hunicode.c
tools/htools/master/hbox/hmemory/: ReadMe.md  hdoublylinkedlist.c  hdoublylinkedlist.h  hfiledescriptor.c  hfiledescriptor.h  hmemoryhash.c  hmemoryhash.h  hmemoryheap.c  hmemorystaticallocator.c  hmemorystaticallocator.h  hobject.h  hringbuf.c  hsoftwarevirtualmemory.c  hsoftwarevirtualmemory.h
tools/htools/master/hbox/hnet/: ReadMe.md  hnet.c  hnet.h
tools/htools/master/hbox/hruntime/: ReadMe.md  hexecutableloader.c  hexecutableloader.h  hruntime.c  hruntime.h  hsoftwaretimer.c  hsoftwaretimer.h  hstacklesscoroutine.c  hstacklesscoroutine.h
tools/htools/master/hbox/hshell/: ReadMe.md  hshell.c  hshell.h  hshell_context.h  hshell_ctlseq.h  hshellv1.c  hshellv1.h
tools/htools/master/hcppbox/: CMakeLists.txt  HCPPBox.h  HCPPGlobalObject.cpp  HCPPGui.cpp  HCPPGui.h  HCPPInit.cpp  HCPPObject.cpp  HCPPObjectPool.cpp  HCPPSocket.cpp  HCPPSocket.h  HCPPSocketCygwinHelper.cpp  HCPPThread.cpp  HCPPTimer.cpp  ReadMe.md  SConscript
tools/htools/master/hplatformbox/: CMakeLists.txt  ReadMe.md
tools/htools/master/hrc/: CMakeLists.txt  ReadMe.md  SConscript
tools/htools/master/htools/: CMakeLists.txt  ReadMe.md
tools/htools/master/test/: CMakeLists.txt  ReadMe.md  SConstruct  building.py
(+1389 files in other folders)
