
if(NOT DEFINED HTOOLS_INSTALL_DIR)
    set(HTOOLS_INSTALL_DIR ${CMAKE_BINARY_DIR}/htools)
endif()

include(${CMAKE_CURRENT_LIST_DIR}/common/CheckExternalLibrariesAndTools.cmake)


add_subdirectory(hgui_tools)

add_subdirectory(hnet_tools)

add_subdirectory(hcrypto_tools)

add_subdirectory(hsimulator_tools)

add_subdirectory(hsoftplc_tools)

add_subdirectory(hmisc_tools)

add_subdirectory(3rdparty_tools)

add_custom_target(htools
                                    DEPENDS  hgui_tools hnet_tools hcrypto_tools hsimulator_tools hsoftplc_tools hmisc_tools 3rdparty_tools)

